hphp/hack/test/typecheck/argument_unpacking/unpack_call10_unset.php.exp
ERROR: File "unpack_call10_unset.php", line 6, characters 12-12:
An expression is expected here. (Parsing[1002])
ERROR: File "unpack_call10_unset.php", line 6, characters 9-11:
Unbound name: `...` (a global constant) (Naming[2049])
ERROR: File "unpack_call10_unset.php", line 6, characters 3-18:
In `strict` mode, `unset` is banned except on dynamic, darray, keyset, or dict indexing (Typing[4135])
ERROR: File "unpack_call10_unset.php", line 6, characters 9-11:
Unbound global constant (Typing) (Typing[4106])
