hphp/hack/test/typecheck/argument_unpacking/unpack_call10_unset.php
<?hh // partial

function test(): void {
  $args = varray["hello"];
  // HHVM doesn't support unpacking into unset
  unset(...$args);
}
